- Implemented: Option to enable/disable menu tabs per user
- Implemented: Dim levels in steps of 5%
- Fixed: Notifications (NMA) was not send if the API key contained spaces
- Fixed: Siren Switch type can now be switched on/off
- Changed: Lua example scripts now in UTF8
- Implemented: Solar Radiation for Davis
- Fixed: Enable/disable menus for remote admin users

Version 1.0.1087 (Oktober 16th 2013)
- Implemented: Login page (solves the caching problems)
- Fixed: buttons add sensor/switch buttons now hidden for 'viewer' users
- Implemented: option in settings for basic-auth login type
- Changed: Logout button now placed under setup for users with admin rights
- Changed: Soil Moister sensor type moved as subtype of general sensors
- Implemented: Leaf Wetness sensor
- Changed: Removed actual meter values for meters sensors in dashboard, only usage/return is displayed
- Implemented: Option to specify local networks with mask (192.168.0.0/24, 192.168.0.10/32)
- Fixed: non admin user devices view (was only working correct for user with ID=1)
- Implemented: Temperature Dewpoint in custom graph
- Fixed: Camera special video/image url characters
- Implemented: P1 Smart Meter electra, Report view
- Changed: New splash screens for iOS
- Changed: Dutch translation, and added extra TO field
- Implemented: Report view for: P1 Smart Gas electra, CM119/160
- Implemented: Web Update now also supported for armv7l systems (cubieboard2)
- Changed: P1 Smart Meter Energy, removed Actual as it is displayed in Big
- Changed: P1 Smart Meter Gas, added Today value in Big
- Implemented: Option to Restart/Shutdown the system
- Implemented: Option to update to Stable or Beta versions
- Changed: webupdate for armv7l (cubieboard2)
- Implemented: time safeguard (for systems without RTC)
- Implemented: Swedish language support (thanks to the community!)
- Fixed: 1Wire illegal temperature (exactly 85 degrees)
- Implemented: 1Wire Voltage support on Utility/Dashboard